<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag2_storage_influxdb</name>
  <version>0.0.1</version>
  <description>Use InfluxDB as storage for ROS data</description>
  <maintainer email="adam.aposhian@fireflyautomatix.com">Adam Aposhian</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rapidjson-dev</build_depend>

  <depend>pluginlib</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_cpp</depend>
  <depend>cpr</depend>

  <exec_depend>rosbag2_influxdb_converter</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>